# rhl-redtail-simulations-morse-code

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  simulation.h  simulations.cmake
server/: README.md  autoapp.py  config.py  devrc  devrc-matrix  requirements.txt
server/hybridapi/: __init__.py
server/hybridapi/static/js/: ll-loader.js
server/hybridapi/static/simulations/: deploy_door.sh  deploy_watertankDeusto.sh
server/hybridapi/static/simulations/butterfly/: butterfly.html  config.html  version.js
server/hybridapi/templates/: index.html
server/hybridapi/views/: main.py
server/simulations/: butterfly-stm32-wb55rg.yml  butterfly.yml  door.yml  matrix.yml  morse.yml  parking.yml  template.yml  watertank-test.yml  watertank.yml  watertankDeusto.yml
src-stdcpp/: main.cpp
src-stdcpp/labsland/protocols/: i2ciowrapperfiles.cpp  i2ciowrapperfiles.h  spiiowrapperfiles.cpp  spiiowrapperfiles.h
src-stdcpp/labsland/simulations/: targetdevicefiles.cpp  targetdevicefiles.h  targetdevicestd.cpp  targetdevicestd.h
src-stdcpp/labsland/simulations/utils/: communicatorfiles.h
src-stdcpp/labsland/utils/: timemanagerstd.cpp  timemanagerstd.h
src/deusto/: door.cpp  door.h  watertankDeusto.cpp  watertankDeusto.h
src/labsland/: protocols.h
src/labsland/simulations/: door.cpp  door.h  simulation.h  targetdevice.cpp  targetdevice.h  watertanksimulation.cpp  watertanksimulation.h
src/labsland/simulations/utils/: communicator.h
src/labsland/utils/: timemanager.h
src/rhlab/: butterfly.cpp  butterfly.h  matrix.cpp  matrix.h  morse.cpp  morse.h  morse_README.md
(+16 files in other folders)
